# ink_supply_system_gd32f427

./: .gitignore  CMakeLists.txt  Makefile  Makefile.test  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  build.sh
config/: FreeRTOSConfig.h  error_config.h  ethercat_config.h  gd32f427vgt6_flash.ld  lwipopts.h
docs/: README.md  上位机交互流程文档.md  上位机通信协议规范.md  安全保护流程图.md  实时控制流程图.md  故障处理流程图.md  系统初始化流程图.md  系统总体运行流程图.md  系统架构设计文档.md  通信协议测试文档.md  通信处理流程图.md  通信接口规范文档.md  项目设计文档.md
docs/1010/ink_rtos_lwip/CONFIG/: FreeRTOSConfig.h  includes.h
docs/1010/ink_rtos_lwip/FreeRTOS/: timers.c
docs/1010/ink_rtos_lwip/HARDWARE/24CXX/: 24cxx.h
docs/1010/ink_rtos_lwip/HARDWARE/ETHERNET/: lan8720.c  lan8720.h  stm32f4x7_eth.c  stm32f4x7_eth.h
docs/1010/ink_rtos_lwip/HARDWARE/IIC/: myiic.c
docs/1010/ink_rtos_lwip/HARDWARE/PCF8574/: pcf8574.c  pcf8574.h
docs/1010/ink_rtos_lwip/HARDWARE/TIMER/: timer.c  (+1 more)
docs/1010/ink_rtos_lwip/MALLOC/: malloc.c  malloc.h
docs/1010/ink_rtos_lwip/USER/: IIC.uvguix.jsg12  IIC.uvguix.lzy  IIC.uvguix.waiken  IIC.uvguix.win11  IIC.uvoptx  IIC.uvprojx  freertos_hooks.c  gd32f4xx_it.c  main.cbk  stm32f4xx_hal_conf.h  test - 副本.c  test.c  test2.c  test2.h
docs/1010/ink_rtos_lwip/USMART/: usmart.h  usmart_config.c
docs/928/: EtherCAT协议详细设计.md  EtherCAT通信协议设计文档.md  FreeRTOS和lwIP库下载与配置说明.md  HAL层多实例设计补充说明.md  OTA固件升级设计方案.md  TCP上位机通信命令详细设计.md  USMART串口调试实测指南.md  USMART串口调试系统使用说明.md  USMART工作原理与完整使用流程详解.md  design.txt  design1.txt  dual_protocol_communication.c  unified_command_system.c  ~$墨路通信协议.xlsx  代码目录.txt  协议兼容性设计说明.md  墨路控制系统TCP通信协议设计文档.md  墨路控制系统v2模板目录结构设计.md  墨路控制系统v3模板目录结构设计.md  墨路控制系统中间件层设计详解.md  墨路控制系统详细设计文档v1.md  墨路控制系统详细设计文档v2.md  墨路控制系统详细设计文档v3.md  墨路控制系统详细设计文档v4.md  墨路网络通信设计方案-基于协议表格.md  墨路通信协议.xlsx  网络通信中间件设计-EtherCAT与TCPIP兼容方案.md  通信协议切换设计方案.md
docs/928/.claude/: settings.local.json
docs/928/bootloader_gd32f427/: README.md  工程完成总结.md  快速开始.md  编译测试记录.md  编译说明.md
docs/928/bootloader_gd32f427/CORE/: startup_gd32f407xx.s
docs/928/bootloader_gd32f427/USER/: Bootloader.uvguix.David  Bootloader.uvoptx  Bootloader.uvprojx  RTE_Components.h  gd32f4xx.h  gd32f4xx_it.c  main.c  main.h
docs/928/bootloader_gd32f427/bootloader/: boot_config.c  bootloader.c  bootloader.h
docs/928/bootloader_gd32f427/config/: boot_config.h  flash_layout.h  gd32f427_bootloader.ld
docs/928/bootloader_gd32f427/utils/: crc32.c  crc32.h  flash_hal.c  flash_hal.h
docs/928/ink_supply_template_simple/: readme.txt  工程目录结构解读文档.md
docs/928/ink_supply_template_simple/USER/: InkSupplySystem.uvguix.David  InkSupplySystem.uvguix.win11  InkSupplySystem.uvoptx  InkSupplySystem.uvprojx  gd32f407xx.h  gd32f4xx_it.c  main - 副本.c  main.c  system_gd32f4xx.h
docs/928/ink_supply_template_simple/config/: FreeRTOSConfig.h  lwipopts.h
docs/928/实验2 按键输入实验/: readme.txt
docs/928/实验2 按键输入实验/USER/: KEY.uvguix.12142  KEY.uvguix.lzy  KEY.uvguix.waiken  KEY.uvoptx  KEY.uvprojx  gd32f4xx.h  gd32f4xx_it.c  gd32f4xx_it.h  main.c
docs/ink_supply_template_simple/: DEVELOPMENT_GUIDE.md  README.md
docs/ink_supply_template_simple/USER/: IIC.uvguix.12142  IIC.uvguix.win11  IIC.uvoptx  InkSupplySystem.uvguix.David  InkSupplySystem.uvguix.win11  system_gd32f4xx.c
docs/ink_supply_template_simple/USMART/: usmart.c  usmart_str.c  usmart_str.h
docs/ink_supply_template_simple/config/: lwipopts.h
docs/ink_supply_template_simple/drivers/ADC/: adc.h
docs/ink_supply_template_simple/drivers/DAC/: dac.c
docs/ink_supply_template_simple/drivers/DMA/: dma.h
docs/ink_supply_template_simple/drivers/EXTI/: exti.c  exti.h
docs/ink_supply_template_simple/drivers/IIC/: myiic.h
docs/ink_supply_template_simple/drivers/IWDG/: iwdg.c  iwdg.h
docs/ink_supply_template_simple/drivers/KEY/: key.c  key.h
docs/ink_supply_template_simple/drivers/LCD/: lcd.h
docs/ink_supply_template_simple/drivers/LED/: led.h
docs/ink_supply_template_simple/drivers/RTC/: rtc.c  rtc.h
docs/ink_supply_template_simple/drivers/SPI/: spi.c  spi.h
docs/ink_supply_template_simple/drivers/TIMER/: timer.h
docs/ink_supply_template_simple/drivers/W25QXX/: w25qxx.c  w25qxx.h
docs/ink_supply_template_simple/drivers/WKUP/: wkup.c  wkup.h
docs/ink_supply_template_simple/drivers/WWDG/: wwdg.c  wwdg.h
docs/ink_supply_template_simple/middleware/usart/: usart.h
docs/tmp/: gd32f427_complete_hal_implementation.md  gd32f427_porting_guide.md  gd32f427_完整HAL层代码实现.md  hal_layer_cubemx_implementation.md  middleware_layer_implementation_supplement.md  v4_rtos_task_design.md  供墨系统控制板卡具体实现设计文档(GD32F427代码版8周)v4.md  供墨系统控制板卡工业级设计文档(成熟方案8周版)v4.md  供墨系统控制板卡简化实现设计文档(需求不变6周版)v3.md  供墨系统控制板卡简化设计文档(6周版)v2.md  供墨系统控制板卡综合技术设计文档(分层版).md  供墨系统控制板卡综合技术设计文档(分层版)v1.md  供墨系统控制板卡综合技术设计文档.md  供墨系统程序运行思维导图.md
include/: common_includes.h
include/app/: actuator_task.h  app_main.h  app_types.h  comm_task.h  config_task.h  control_task.h  ethercat_app.h  hmi_task.h  safety_task.h  sensor_task.h
include/config/: app_config.h  project_config.h  system_config.h
include/drivers/actuators/: led_control.h  mpb025bbb_driver.h  mra23d3_driver.h  valve_control.h
include/drivers/sensors/: frd8061_driver.h  ftt518_driver.h  hp10my_driver.h
include/hal/: adc_hal.h  eth_hal.h  flash_hal.h  gpio_hal.h  hal_common.h  hal_manager.h  i2c_hal.h  pwm_hal.h  spi_hal.h  timer_hal.h  uart_hal.h
include/middleware/: filter.h  middleware_common.h  pid.h  tasks.h
include/system/: board_init.h  error_handler.h  system_manager.h  task_scheduler.h
src/: main.c
src/app/: actuator_task.c  app_main.c  comm_task.c  config_task.c  control_task.c  ethercat_app.c  hmi_task.c  safety_task.c  sensor_task.c  tcp_server.c
src/board/: board_init.c
src/drivers/actuators/: led_control.c  mpb025bbb_driver.c  mra23d3_driver.c  valve_control.c
src/drivers/sensors/: frd8061_driver.c  ftt518_driver.c  hp10my_driver.c
src/hal/: adc_hal.c  eth_hal.c  flash_hal.c  gpio_hal.c  hal_common.c  hal_manager.c  i2c_hal.c  pwm_hal.c  spi_hal.c  timer_hal.c  uart_hal.c
src/middleware/: filter.c  middleware_common.c  pid.c  tasks.c
src/system/: error_handler.c  system_manager.c
(+35 files in other folders)
